added portfolio monitoring

--- a/signal_ui.ipynb
+++ b/signal_ui.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb6afdc9b8f641a2ad03d7fba5cf125e",
+       "model_id": "8df72c5cd7d44a29a6757e0509f0cbea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -18,6 +18,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Config is saved!\n"
+     ]
     }
    ],
    "source": [
